--- a/SearchEngine/pom.xml
+++ b/SearchEngine/pom.xml
@@ -86,6 +86,21 @@
       <artifactId>httpcore</artifactId>
       <version>4.4.11</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-highlighter</artifactId>
+      <version>8.8.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-queryparser</artifactId>
+      <version>8.8.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.jianggujin</groupId>
+      <artifactId>IKAnalyzer-lucene</artifactId>
+      <version>8.0.0</version>
+    </dependency>
   </dependencies>
 
   <build>
